exported dfs with and without nulls

--- a/notebook1.ipynb
+++ b/notebook1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d6f095a7",
+   "id": "a0dc9c56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "0bdc49ec",
+   "id": "166a5125",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "47481e03",
+   "id": "4c3419c3",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "490d6ffc",
+   "id": "fc674689",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "deeb0118",
+   "id": "0dc73b5e",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "295aa385",
+   "id": "99731109",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "1679c233",
+   "id": "c65e45ef",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "01c79455",
+   "id": "afbe177c",
    "metadata": {
     "scrolled": true
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6a41459",
+   "id": "d3826a9f",
    "metadata": {},
    "source": [
     "**Keeping xlxs version as it differenciates float dtype in columns**"
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e1e69b2",
+   "id": "39ed1723",
    "metadata": {},
    "source": [
     "**example iloc condition**\n",
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "b4a0f275",
+   "id": "fd15e36c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "a91ae9e7",
+   "id": "56876b11",
    "metadata": {},
    "outputs": [
     {
@@ -427,15 +427,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bae2946",
+   "id": "efe03bb9",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "id": "711ab851",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('data-processed/measurements2_clean_withna.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "507d64ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.dropna().reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "74f39e2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('data-processed/measurements2_clean_withoutna.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "819ffa08",
+   "id": "09f4c769",
    "metadata": {},
    "outputs": [],
    "source": []
