--- a/notebook1.ipynb
+++ b/notebook1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a0dc9c56",
+   "id": "a9c1e0f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "166a5125",
+   "id": "62063c4f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4c3419c3",
+   "id": "ed9d61be",
    "metadata": {},
    "outputs": [
     {
@@ -47,8 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "fc674689",
+   "execution_count": 88,
+   "id": "e9e1ea4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,8 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "0dc73b5e",
+   "execution_count": 89,
+   "id": "3ee20beb",
    "metadata": {},
    "outputs": [
     {
@@ -94,8 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "99731109",
+   "execution_count": 90,
+   "id": "c672e76c",
    "metadata": {},
    "outputs": [
     {
@@ -130,8 +130,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "c65e45ef",
+   "execution_count": 91,
+   "id": "e1f90ba1",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "2     0    0           NaN        NaN  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,8 +242,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "afbe177c",
+   "execution_count": 92,
+   "id": "a43403dd",
    "metadata": {
     "scrolled": true
    },
@@ -345,7 +345,7 @@
        "2     0    0            NaN        NaN  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3826a9f",
+   "id": "dbbd5a24",
    "metadata": {},
    "source": [
     "**Keeping xlxs version as it differenciates float dtype in columns**"
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39ed1723",
+   "id": "70029f4d",
    "metadata": {},
    "source": [
     "**example iloc condition**\n",
@@ -373,8 +373,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "fd15e36c",
+   "execution_count": 93,
+   "id": "fa903589",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,8 +387,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "56876b11",
+   "execution_count": 94,
+   "id": "407da8f8",
    "metadata": {},
    "outputs": [
     {
@@ -426,16 +426,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "efe03bb9",
+   "execution_count": 95,
+   "id": "1aecbb33",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(388, 9)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "711ab851",
+   "execution_count": 96,
+   "id": "31fec212",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,8 +457,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "507d64ed",
+   "execution_count": 97,
+   "id": "82635c17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,8 +467,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "74f39e2b",
+   "execution_count": 98,
+   "id": "71823206",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,8 +477,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 100,
+   "id": "a35f5c6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(388, 9)"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "09f4c769",
+   "id": "ea54a10d",
    "metadata": {},
    "outputs": [],
    "source": []
