--- a/notebook1.ipynb
+++ b/notebook1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a9c1e0f7",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "62063c4f",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ed9d61be",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
        "PosixPath('/Users/cris/Iron/reto_data')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "id": "e9e1ea4c",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "id": "3ee20beb",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "id": "c672e76c",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "id": "e1f90ba1",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "2     0    0           NaN        NaN  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "id": "a43403dd",
    "metadata": {
     "scrolled": true
@@ -345,7 +345,7 @@
        "2     0    0            NaN        NaN  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "id": "fa903589",
    "metadata": {},
    "outputs": [],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "id": "407da8f8",
    "metadata": {},
    "outputs": [
@@ -410,13 +410,17 @@
       "19.0      1\n",
       "Name: t_in, dtype: int64 \n",
       " \n",
-      " mean:  21.929521276595743 \n",
-      " median:  22.0\n"
+      "\n",
+      "mean:  21.929521276595743 \n",
+      "\n",
+      "median:  22.0\n"
      ]
     }
    ],
    "source": [
-    "print(df[\"t_in\"].value_counts(),\"\\n\",\"\\n\", \"mean: \",df[\"t_in\"].mean(), \"\\n\", \"median: \",df[\"t_in\"].median())\n",
+    "print(df[\"t_in\"].value_counts(),\"\\n\",\"\\n\")\n",
+    "print(\"mean: \",df[\"t_in\"].mean(), \"\\n\")\n",
+    "print(\"median: \",df[\"t_in\"].median())\n",
     "df[\"t_in\"].fillna(value=22.0, inplace=True)\n",
     "#df[\"t_in\"].mean()\n",
     "#df[\"t_in\"].median()\n",
@@ -426,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "id": "1aecbb33",
    "metadata": {},
    "outputs": [
@@ -436,7 +440,7 @@
        "(388, 9)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "id": "31fec212",
    "metadata": {},
    "outputs": [],
@@ -457,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
    "id": "82635c17",
    "metadata": {},
    "outputs": [],
@@ -467,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "id": "71823206",
    "metadata": {},
    "outputs": [],
@@ -477,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 14,
    "id": "a35f5c6c",
    "metadata": {},
    "outputs": [
@@ -487,7 +491,7 @@
        "(388, 9)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
